--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,15 +1,10 @@
-$mainBlue: #2f5572;
-
-body {
-    color: $mainBlue;
-    padding: 25px;
-    margin: 10px;
-    columns: 300px 2;
-}
-
-.box {
-    a {
-        display: block;
-        padding: 10px;
-    }
-}
+@import "normalize.css";
+@import "base/_global.css";
+@import "base/_variables.css";
+@import "base/_mixins.css";
+@import "modules/_btn.css";
+@import "modules/_large-hero";
+@import "modules/_wrapper";
+@import "modules/_page-section";
+@import "modules/_headline";
+@import "modules/_row";
