--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,10 +1,10 @@
 .wrapper {
     padding-left: 18px;
     padding-right: 18px;
-    max-width: 1200px;
+    max-width: 1236px;
     margin: 0 auto;
     overflow: hidden;
-    
+
 
     &--medium {
         max-width: 976px;
@@ -13,5 +13,14 @@
     .wrapper {
         padding-left: 0;
         padding-right: 0;
+    }
+
+    &--b-margin {
+
+        margin-bottom: 1rem;
+
+        @mixin atSmall {
+            margin-bottom: 3.875rem;
+        }
     }
 }
